--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "hyperprogress",
   "description": "lightweight progressbar",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/dominictarr/hyperprogress",
   "repository": {
     "type": "git",
     "url": "git://github.com/dominictarr/hyperprogress.git"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
   "author": "'Dominic Tarr' <dominic.tarr@gmail.com> (dominictarr.com)",
-  "license": "MIT"  
+  "license": "MIT"
 }
